--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://TsuriHefer.github.io/rockGameAgain",
+  "homepage": "https://TsuriHefer.github.io/rockGameAgain/public",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
