--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
    "scripts": {
-    "build": "react-scripts build",
+    "build": "npm run build",
     "test":"react-scripts test",
     "start":"react-scripts start"
    },
